--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.Downloads-apache-tomcat-10.0.27=C:\\Users\\admin\\Downloads\\apache-tomcat-10.0.27
 file.reference.javax.servlet.jar=C:\\Users\\Rico\\Downloads\\javax.servlet.jar
 file.reference.mysql-connector-java-8.0.21.jar=C:\\Users\\Rico\\Downloads\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 includes=**
@@ -40,7 +41,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
     ${file.reference.javax.servlet.jar}:\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.Downloads-apache-tomcat-10.0.27}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
